hphp/test/slow/readonly/readonly_unsafe_cast.php.expectf

Fatal error: This expression is readonly, its members cannot be modified in %s on line 11
